# loc

./: Cargo.toml  LICENSE  README.md  build.rs  languages.toml
languages/: AWK.toml  Assembly.toml  C#.toml  C++.toml  C.toml  CSS.toml  Cap'n Proto.toml  Carbon.toml  Clojure.toml  CoffeeScript.toml  Common Lisp.toml  Config.toml  Crystal.toml  D.toml  Dart.toml  Dockerfile.toml  Elixir.toml  Elm.toml  Emacs Lisp.toml  Erlang.toml  F#.toml  FlatBuffers.toml  GDScript.toml  GLSL.toml  Game Maker Language.toml  Gleam.toml  Go.toml  Groovy.toml  HCL.toml  HLSL.toml  HTML.toml  Hare.toml  Haskell.toml  JSON.toml  Java.toml  JavaScript.toml  Julia.toml  Kotlin.toml  Lua.toml  Make.toml  (+31 more)
src/: count.rs  languages.rs  main.rs
tests/: backtick_string_with_trailing_block_comment.js  blank_line_in_block_comment.c  blank_line_in_docstring.py  blank_line_in_multiline_string.go  blank_line_in_multiline_string.js  blank_line_in_multiline_string.py  blank_lines.c  block_comment.cl  block_comment.coffee  block_comment.elm  block_comment.jl  block_comment.lua  block_comment.nim  block_comment.rkt  block_comment.scm  block_comment_closes_and_reopens_on_same_line.c  block_comment_hides_string_opener.js  c_style_block_comments.c  c_style_inline_block_comment.c  c_style_inline_line_comment.c  c_style_line_comments.c  code_no_trailing_newline.c  comment_at_end_no_newline.c  css_style_block_comment.css  docstring_class.py  docstring_function.py  docstring_module.py  docstring_not_docstring_argument.py  docstring_not_docstring_assignment.py  docstring_plus_multiline_string.py  empty_file.c  (+94 more)
