[package]
name = "loc"
version = "1.0.0"
description = "Count lines of code in files"
authors = ["Jake Low <hello@jakelow.com>"]
homepage = "https://github.com/jake-low/loc"
repository = "https://github.com/jake-low/loc"
edition = "2024"
autotests = false

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
memchr = "2.7"
num-format = { version = "0.4", features = ["with-system-locale"] }
rayon = "1.11"
termcolor = "1.4"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"

